// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the editing is false 1`] = `
<DocumentFragment>
  @media not all and (width <= 960px) {
  .emotion-0>div:nth-of-type(1),
  .emotion-0>div:nth-of-type(2) {
    display: none;
  }
}

.emotion-1 {
  font-size: 1rem;
  line-height: 1rem;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_4_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      aria-labelledby=""
      class="fui-MenuList emotion-0 ___1rlijet_kivkug0 f22iagw f1vx9l62 f1t6b6ee"
      data-tabster="{"mover":{"cyclic":true,"direction":1,"memorizeCurrent":true}}"
      role="menu"
    >
      <div
        aria-labelledby="menu-group_r_5_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.24 1.76a2.62 2.62 0 0 0-3.71 0L2.66 9.64c-.38.37-.64.84-.78 1.35l-.86 3.39a.5.5 0 0 0 .6.6l3.39-.86c.51-.14.98-.4 1.35-.78l7.88-7.87a2.62 2.62 0 0 0 0-3.7Zm-3 .71a1.62 1.62 0 1 1 2.29 2.3l-.78.77-2.3-2.29.79-.78ZM9.75 3.96l2.3 2.29-6.4 6.39c-.24.24-.55.42-.89.5l-2.57.67.66-2.57c.09-.34.27-.65.51-.9l6.39-6.38Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Edit
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_6_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 3a5 5 0 1 1-4.98 5.46.5.5 0 0 0-1 .08 6 6 0 1 0 1.48-4.5V2.5a.5.5 0 1 0-1 0v3c0 .28.22.5.5.5h3a.5.5 0 1 0 0-1H4a5 5 0 0 1 4-2Zm0 2.5a.5.5 0 1 0-1 0v3c0 .28.22.5.5.5h2a.5.5 0 1 0 0-1H8V5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Version history
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_7_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.5 4h1a3.5 3.5 0 0 1 .2 7H9.5a.5.5 0 0 1-.1-.99h.1l1-.01a2.5 2.5 0 0 0 .16-5H9.5a.5.5 0 0 1-.09-1h1.09-1Zm-4 0h1a.5.5 0 0 1 .09 1H5.5a2.5 2.5 0 0 0-.16 5H6.5a.5.5 0 0 1 .09 1H5.5a3.5 3.5 0 0 1-.2-7h1.2-1Zm0 3h5a.5.5 0 0 1 .09 1H5.5a.5.5 0 0 1-.09-1h.09Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Copy link
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_8_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.5 13h9a.5.5 0 0 1 .09 1H3.5a.5.5 0 0 1-.09-1h9.09-9ZM7.91 1H8a.5.5 0 0 1 .5.41v8.89l2.68-2.69a.5.5 0 0 1 .64-.06l.07.06c.17.17.2.44.06.64l-.06.07-3.54 3.53a.5.5 0 0 1-.63.06l-.07-.06L4.1 8.32a.5.5 0 0 1 .64-.77l.07.06L7.5 10.3V1.5a.5.5 0 0 1 .41-.5H8h-.09Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Download
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_9_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              class="emotion-1"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.6924215,13.986674 C22.9997233,14.1908343 24,15.3216239 24,16.6862741 C24,17.7522298 23.3892094,18.6751163 22.4988002,19.1254521 C22.4321553,19.1592575 22.3639409,19.1904067 22.294157,19.2186583 L8.59404885,19.2186583 L8.59404885,19.2181754 C6.85476268,19.2073094 5.44797646,17.7943658 5.44797646,16.0524235 C5.44797646,14.3037201 6.86550796,12.8860679 8.61421133,12.8860679 C8.70222602,12.8860679 8.78903338,12.8906557 8.87511633,12.8976583 C8.87028699,12.8172498 8.86702719,12.7364791 8.86702719,12.6548633 C8.86702719,10.4662072 10.6413261,8.69190834 12.8299821,8.69190834 C14.3676434,8.69190834 15.6998164,9.5683125 16.3568479,10.8482079 C16.9002691,10.4918027 17.5498151,10.283779 18.2483789,10.283779 C20.1559675,10.283779 21.7023216,11.8301331 21.7023216,13.7377217 C21.7023216,13.8215107 21.6982167,13.9043338 21.6924215,13.986674 Z M8.18741857,12.2086324 C6.25507961,12.421727 4.74711875,14.0641849 4.74711875,16.0524235 C4.74711875,16.8619413 4.9992102,17.6150766 5.42841764,18.2378198 L3.27887919,18.2378198 C1.46799809,18.2378198 -1.77635684e-15,16.7698217 -1.77635684e-15,14.9589406 C-1.77635684e-15,13.2281057 1.34134869,11.8115401 3.04103428,11.6894786 C2.98428956,11.4324371 2.95350253,11.1656161 2.95350253,10.8915512 C2.95350253,8.85248384 4.60646427,7.19964283 6.64541087,7.19964283 C7.40977438,7.19964283 8.11980783,7.43181327 8.70886636,7.82963 C9.54542848,6.15252157 11.276867,5 13.2783862,5 C15.9223281,5 18.0967377,7.01021204 18.3569183,9.58557738 C18.3206982,9.58461151 18.2847197,9.58292125 18.2483789,9.58292125 C17.6798451,9.58292125 17.1232638,9.6982217 16.6079734,9.92012979 C15.7386926,8.71545137 14.3462736,7.99105063 12.8299821,7.99105063 C10.4089142,7.99105063 8.41282793,9.84563725 8.18741857,12.2086324 Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Open with OneDrive
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the editing is true 1`] = `
<DocumentFragment>
  @media not all and (width <= 960px) {
  .emotion-0>div:nth-of-type(1),
  .emotion-0>div:nth-of-type(2) {
    display: none;
  }
}

.emotion-1 {
  display: transparent;
  font-size: 1rem;
  line-height: 1rem;
}

.emotion-2 {
  color: transparent;
}

.emotion-3 {
  color: inherit;
}

.emotion-4 {
  color: inherit;
}

.emotion-5 {
  color: inherit;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      aria-labelledby=""
      class="fui-MenuList emotion-0 ___1rlijet_kivkug0 f22iagw f1vx9l62 f1t6b6ee"
      data-tabster="{"mover":{"cyclic":true,"direction":1,"memorizeCurrent":true}}"
      role="menu"
    >
      <div
        aria-labelledby="menu-group_r_1_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 3a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1V9.5C4 8.67 4.67 8 5.5 8h5c.83 0 1.5.67 1.5 1.5V13a1 1 0 0 0 1-1V5.62a1 1 0 0 0-.3-.7L11.1 3.28a1 1 0 0 0-.71-.29H10v1.5C10 5.33 9.33 6 8.5 6h-2A1.5 1.5 0 0 1 5 4.5V3H4Zm2 0v1.5c0 .28.22.5.5.5h2a.5.5 0 0 0 .5-.5V3H6Zm5 10V9.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0-.5.5V13h6ZM2 4c0-1.1.9-2 2-2h6.38a2 2 0 0 1 1.41.59l1.62 1.62A2 2 0 0 1 14 5.62V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Save
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <div
              class="emotion-1"
            />
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Save and Close
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m2.59 2.72.06-.07a.5.5 0 0 1 .63-.06l.07.06L8 7.29l4.65-4.64a.5.5 0 0 1 .7.7L8.71 8l4.64 4.65c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L8 8.71l-4.65 4.64a.5.5 0 0 1-.7-.7L7.29 8 2.65 3.35a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Cancel
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_2_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 3a5 5 0 1 1-4.98 5.46.5.5 0 0 0-1 .08 6 6 0 1 0 1.48-4.5V2.5a.5.5 0 1 0-1 0v3c0 .28.22.5.5.5h3a.5.5 0 1 0 0-1H4a5 5 0 0 1 4-2Zm0 2.5a.5.5 0 1 0-1 0v3c0 .28.22.5.5.5h2a.5.5 0 1 0 0-1H8V5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Version history
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="fui-MenuDivider ___3pxu8i0_ssaivc0 f8dz51a f14z66ap f1facbz3"
        role="presentation"
      />
      <div
        aria-labelledby="menu-group_r_3_"
        class="fui-MenuGroup"
        role="group"
      >
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon emotion-2 ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.86 3.66a.5.5 0 0 1-.02.7l-7.93 7.48a.6.6 0 0 1-.84-.02L2.4 9.1a.5.5 0 0 1 .72-.7l2.4 2.44 7.65-7.2a.5.5 0 0 1 .7.02Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Minimap
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon emotion-3 ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.86 3.66a.5.5 0 0 1-.02.7l-7.93 7.48a.6.6 0 0 1-.84-.02L2.4 9.1a.5.5 0 0 1 .72-.7l2.4 2.44 7.65-7.2a.5.5 0 0 1 .7.02Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Word wrap
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon emotion-4 ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.86 3.66a.5.5 0 0 1-.02.7l-7.93 7.48a.6.6 0 0 1-.84-.02L2.4 9.1a.5.5 0 0 1 .72-.7l2.4 2.44 7.65-7.2a.5.5 0 0 1 .7.02Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Sync scroll
          </span>
        </div>
        <div
          class="fui-MenuItem rfoezjv"
          role="menuitem"
          tabindex="0"
        >
          <span
            class="fui-MenuItem__icon ro9koqv"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon emotion-5 ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.86 3.66a.5.5 0 0 1-.02.7l-7.93 7.48a.6.6 0 0 1-.84-.02L2.4 9.1a.5.5 0 0 1 .72-.7l2.4 2.44 7.65-7.2a.5.5 0 0 1 .7.02Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="fui-MenuItem__content r1ls86vo"
          >
            Preview
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
